--- a/saitae-web/src/main/webapp/pages/listaRepresentantes.xhtml
+++ b/saitae-web/src/main/webapp/pages/listaRepresentantes.xhtml
@@ -21,7 +21,7 @@
                                                itemValue="#{g.gradoPK}"
                                                itemLabel="#{representanteController.getGradoNombre(g.gradoPK)}"/>
                                 <p:ajax event="itemSelect" listener="#{representanteController.selectAño}"
-                                        update=":form"/>
+                                        update="representantes"/>
                             </p:selectOneMenu>
                         </h:panelGrid>
                         <h:panelGrid columns="1">
@@ -41,13 +41,12 @@
                                 <p:column headerText="Nombre del Estudiante">
                                     <h:outputText value="#{representanteController.getNombreCompletoPersona(r.persona)}"/>
                                 </p:column>
-                                <p:column headerText="Firma" style="width: 25%;">
-                                </p:column>
                             </p:dataTable>
                             <h:commandLink id="cl" title="Descargar en formato de Excel" >
                                 <p:graphicImage library="img" name="xls.png" width="37px" height="32px"/>
                                 <p:dataExporter type="xls" target="representantes" 
                                                 options="#{axiliarController.excelOpt}"
+                                                postProcessor="#{representanteController.postProcessXLSp}"
                                                 fileName="#{representanteController.getGradoNombre(representanteController.id)}_Listado_Representantes"
                                                 encoding="UTF-8"/>
                             </h:commandLink>
