--- a/saitae-web/src/main/webapp/pages/nominaA.xhtml
+++ b/saitae-web/src/main/webapp/pages/nominaA.xhtml
@@ -14,10 +14,13 @@
 
                 <p:panelGrid columns="2" >
                     <p:outputLabel for="soe" value="Seleccione el grado que desea listar"/>
-                    <p:selectOneMenu id="soe"
+                    <p:selectOneMenu id="soe" value="#{nominaAController.PK}"
+                                     converter="omnifaces.SelectItemsConverter"
                                      title="Seleccione el grado para mostar su nómina de estudiantes.">
-                        <f:selectItem itemLabel="Seleccione" itemValue=" "/>
-                        <f:selectItems value="#{nominaAController.grados}"/>
+                        <f:selectItem itemLabel="Seleccione" itemValue="#{null}"/>
+                        <f:selectItems value="#{nominaAController.grados}" var="g"
+                                       itemValue="#{g.gradoPK}" 
+                                       itemLabel="#{nominaAController.getGradoNombre(g.gradoPK)}"/>
                         <p:ajax event="itemSelect" listener="#{nominaAController.onSelectItem}" 
                                 update="nom"/>
                     </p:selectOneMenu>
@@ -46,6 +49,14 @@
                         <p:outputLabel value="#{e.persona.personaApellido}"/>
                     </p:column>
                 </p:dataTable>
+                <h:commandLink id="cl" title="Descargar en formato de Excel" >
+                    <p:graphicImage library="img" name="xls.png" width="37px" height="32px"/>
+                    <p:dataExporter type="xls" target="nom" 
+                                    options="#{axiliarController.excelOpt}"
+                                    postProcessor="#{nominaAController.postProcesoXLS}"
+                                    fileName="#{nominaAController.getGradoNombre(nominaAController.PK)}_Nomina_Alumnos"
+                                    encoding="UTF-8"/>
+                </h:commandLink>
             </p:panelGrid>
         </h:form>
 
