--- a/saitae-web/src/main/webapp/pages/repInv.xhtml
+++ b/saitae-web/src/main/webapp/pages/repInv.xhtml
@@ -6,7 +6,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns="http://www.w3.org/1999/xhtml">
-    
+
     <ui:define name="content">
         <h:form id="form">
             <h:panelGrid columns="1">
@@ -22,6 +22,26 @@
                                 update=":form"/>
                     </p:selectOneMenu>
                 </h:panelGrid>
+                <h:panelGrid columns="2" cellspacing="25" width="100%"
+                             rendered="#{repInvController.trSelected!=null}">
+                    <h:panelGrid columns="1" dir="LTR" border="1">
+                        <h4 align="center">Tipo de Cargo</h4>
+                        <ui:repeat var="t" value="#{repInvController.tipoCargos}">
+                            <h:panelGrid columns="1">
+                                #{t.idtipoCargo} #{t.nombre}
+                            </h:panelGrid>
+                        </ui:repeat>
+                    </h:panelGrid>
+                    <h:panelGrid columns="1" dir="RTL" border="1" style="margin-right: 0"
+                                 rendered="#{repInvController.trSelected.idtipoRecurso==3}">
+                        <h4 align="center">Categoría</h4>
+                        <ui:repeat var="c" value="#{repInvController.categorias}">
+                            <h:panelGrid columns="1">
+                                #{c.idcategoria} #{c.categoriaNombre}
+                            </h:panelGrid>
+                        </ui:repeat>
+                    </h:panelGrid>
+                </h:panelGrid>
                 <p:dataTable id="inv" value="#{repInvController.recursos}" var="r"
                              emptyMessage="Sin registros"
                              rendered="#{repInvController.trSelected!=null}">
@@ -31,47 +51,53 @@
                     <f:facet name="footer">
                         <h:outputText value="Valor total estimado: $#{repInvController.totalGeneral}"/>
                     </f:facet>
-                    <p:column headerText="Cargo">
-                        <h:outputText value="#{r.tipoCargo.nombre}" />
+                    <p:column headerText="Cargo" width="5%"
+                              filterBy="#{r.tipoCargo.idtipoCargo}">
+                        <h:outputText value="#{r.tipoCargo.idtipoCargo}" />
                     </p:column>
-                    <p:column headerText="Código">
+                    <p:column headerText="Código"  width="10%">
                         <h:outputText value="#{r.idrecurso}"/>
                     </p:column>
                     <p:column headerText="Nombre">
                         <h:outputText value="#{r.nombre}"/>
                     </p:column>
-                    <p:column headerText="Correlativos">
+                    <p:column headerText="Correlativos" width="9%">
                         <h:outputText value="#{repInvController.getCorrelativos(r.ejemplarList)}"/>
                     </p:column>
-                    <p:column headerText="Categoría"
+                    <p:column headerText="Categoría" width="7%"
+                              filterBy="#{r.categoria.idcategoria}"
                               rendered="#{repInvController.trSelected.idtipoRecurso==3}">
-                        <h:outputText value="#{r.categoria.categoriaNombre}"/>
+                        <h:outputText value="#{r.categoria.idcategoria}"/>
                     </p:column>
                     <p:column headerText="Autor"
+                              filterBy="#{repInvController.getAutores(r.autorLibroList)}"
                               rendered="#{repInvController.trSelected.idtipoRecurso==3}">
                         <h:outputText value="#{repInvController.getAutores(r.autorLibroList)}"/>
                     </p:column>
                     <p:column headerText="Editorial"
+                              filterBy="#{repInvController.getEditoriales(r.editorialLibroList)}"
                               rendered="#{repInvController.trSelected.idtipoRecurso==3}">
                         <h:outputText value="#{repInvController.getEditoriales(r.editorialLibroList)}"/>
                     </p:column>
                     <p:column headerText="País"
+                              filterBy="#{r.pais.paisNombre}"
                               rendered="#{repInvController.trSelected.idtipoRecurso==3}">
                         <h:outputText value="#{r.pais.paisNombre}"/>
                     </p:column>
-                    <p:column headerText="Estado Físico">
-                        <h:outputText value="#{r.estadoFisico}"/>
+                    <p:column headerText="Estado Físico"  width="8%"
+                              filterBy="#{r.estadoFisico.equals('B')? 'BUENO' : (r.estadoFisico.equals('R')? 'REGULAR': '')}">
+                        <h:outputText value="#{r.estadoFisico.equals('B')? 'BUENO' : (r.estadoFisico.equals('R')? 'REGULAR': '')}"/>
                     </p:column>
-                    <p:column headerText="N°. de ejemplares">
+                    <p:column headerText="N°. de ejemplares"  width="8%">
                         <h:outputText value="#{r.ejemplarList.size()}"/>
                     </p:column>
-                    <p:column headerText="Valor Unitario">
+                    <p:column headerText="Valor Unitario" width="6%">
                         <h:outputText value="$#{r.valorUnitario}"/>
                     </p:column>
-                    <p:column headerText="Tipo de Valor">
+                    <p:column headerText="Tipo de Valor" width="8%">
                         <h:outputText value="#{r.tipoValor}"/>
                     </p:column>
-                    <p:column headerText="Valor Total">
+                    <p:column headerText="Valor Total" width="5%">
                         <h:outputText value="$#{repInvController.getTotalRecurso(r)}"/>
                     </p:column>
                 </p:dataTable>
