Corrección de errores mínimos

--- a/saitae-web/src/main/webapp/pages/academico.xhtml
+++ b/saitae-web/src/main/webapp/pages/academico.xhtml
@@ -308,10 +308,7 @@
                                 <p:menuitem value="Agregar nuevo" icon="pi pi-plus-circle" update="dias :f1"
                                             actionListener="#{tipoController.nuevoDias()}"
                                             oncomplete="PF('Ddias').show()"/>
-                                <!--<p:menuitem value="Editar" update="f1" icon="fa fa-edit"
-                                            actionListener="#{tipoController.editarDias()}"
-                                            oncomplete="PF('Ddias').show()" />
-                                --><p:menuitem value="Eliminar" icon="pi pi-minus-circle" 
+                                <p:menuitem value="Eliminar" icon="pi pi-minus-circle" 
                                                actionListener="#{tipoController.eliminarDias()}"
                                                update="dias :f1"/>
                             </p:contextMenu>
